--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 REDIS_HOST = 
 REDIS_PORT = 
 
-DB_HOST =
-DB_PORT = 
-DB_USER = 
-DB_PASSWORD = 
+MYSQL_HOST = 
+MYSQL_PORT = 
+MYSQL_USER = 
+MYSQL_PASSWORD =
+MYSQL_DATABASE = 
 
 HOST = 
 PORT = 
