--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "tests/",
     "start:dev": "nodemon src/index.js",
-    "worker": "src/worker/helloWorldWorker.js",
+    "worker": "node src/worker/helloWorldWorker.mjs",
     "start": "node src/index.js"
   },
   "keywords": [],
@@ -15,8 +15,10 @@
   "license": "ISC",
   "dependencies": {
     "bull": "^4.12.0",
+    "bullmq": "^5.1.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
